<resources>
    <string name="app_name">UpakoBuzz</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="share">Share</string>
</resources>