<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/favorite" />

        <item
            android:id="@+id/nav_massage"
            android:icon="@drawable/ic_baseline_mail_outline_24"
            android:title="@string/message" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_baseline_notifications_none_24"
            android:title="@string/notification" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share" />
    </group>

    <item android:title="Parameters">
        <menu>
            <item
                android:id="@+id/setting"
                android:title="Settings and Confidentiality" />
            <item
                android:id="@+id/ass_center"
                android:title="Assistance Center" />
        </menu>
    </item>

    <group android:orderInCategory="100">
        <item
            android:id="@+id/mode_dark"
            android:icon="@drawable/ic_brightness"
            android:title="Dark Mode" />
    </group>
</menu>